[Java] Add double dashed options for VM from java 11
IDEA-359245

GitOrigin-RevId: c3a326917e8a51e82ba148a27d37f5a687c1cab8